--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,24 @@
 /* App.css */
 .app {
-  font-family: Arial, sans-serif;
+  font-size: 16px;
+  font-family: 'Poynter Gothic', sans-serif;
 }
 
+body {
+  font-family: 'Poynter Gothic', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #f4f4f4;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Poynter Gothic', sans-serif;
+}
+
+button {
+  font-size: 18px;
+}
 .status-bar {
   display: flex;
   justify-content: center;
@@ -26,6 +42,7 @@
 
 .content {
   padding: 20px;
+  height: auto;
   border: 1px solid #ddd;
   background-color: #f9f9f9;
   border-radius: 4px;
