--- a/frontend/src/css/FileUpload.css
+++ b/frontend/src/css/FileUpload.css
@@ -1,4 +1,3 @@
-/* FileUpload.css */
 
 .file-upload-wrapper {
   position: relative;
@@ -11,7 +10,23 @@
   text-align: center;
   background-color: #f8f9fa;
   width: 300px;
+  display: flex;
+  margin: 30px;
+  justify-content: space-evenly;
 }
+.dropzone {
+  border: 2px dashed #4CAF50;
+  border-radius: 4px;
+  padding: 20px;
+  cursor: pointer;
+  background-color: #f9f9f9;
+  transition: background-color 0.3s ease;
+}
+
+.dropzone:hover {
+  background-color: #e9f5e9;
+}
+
 
 .input-file__button {
   border: none;
@@ -22,6 +37,7 @@
   cursor: pointer;
   display: inline-block;
   font-size: 16px;
+  margin-left: 30px;
 }
 
 .file-upload-wrapper input[type="file"] {
@@ -29,7 +45,7 @@
 }
 
 .file-list {
-  margin-top: 10px;
+  margin: 5px;
 }
 
 .file-item {
@@ -52,4 +68,52 @@
 
 .upload-button:hover {
   background-color: #0056b3;
+}
+
+.file-upload {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
+
+.file-input {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+.file-input-label {
+  font-size: 1.25em;
+  font-weight: 700;
+  color: white;
+  background-color: #4CAF50;
+  display: inline-block;
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.file-input-label:hover {
+  background-color: #45a049;
+}
+
+.selected-files {
+  margin-top: 20px;
+  text-align: left;
+}
+
+.selected-files ul {
+  list-style: none;
+  padding: 0;
+}
+
+.selected-files li {
+  background: #eee;
+  margin: 5px 0;
+  padding: 5px 10px;
+  border-radius: 4px;
 }
