--- a/frontend/src/css/SchematicPreview.css
+++ b/frontend/src/css/SchematicPreview.css
@@ -1,6 +1,8 @@
 .bounding-box-container {
   position: relative;
   display: inline-block;
+  transform-origin: top left;
+  transform: scale(0.35);
 }
 
 .image {
