--- a/frontend/src/css/HierarchicalTable.css
+++ b/frontend/src/css/HierarchicalTable.css
@@ -1,29 +1,29 @@
 .data-table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-.data-table th, .data-table td {
-    border: 1px solid #ccc;
-    padding: 8px;
-    text-align: left;
+  width: 100%;
+  border-collapse: collapse;
 }
-  
+
+.data-table th,
+.data-table td {
+  border: 1px solid #ccc;
+  padding: 8px;
+  text-align: left;
+}
+
 .main-row {
-    background-color: #f9f9f9;
+  background-color: #f9f9f9;
 }
-  
+
 .sub-row {
-    background-color: #e9e9e9;
+  background-color: #e9e9e9;
 }
-  
 
 .save-button,
 .export-button {
   margin-top: 10px;
   margin-right: 10px;
   padding: 10px 20px;
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   border: none;
   cursor: pointer;
@@ -36,9 +36,9 @@
 }
 
 .table-container {
-    display: flex;
-    flex-direction: column;
- } 
+  display: flex;
+  flex-direction: column;
+}
 
 .table-button {
   display: flex;
