--- a/frontend/src/css/UploadDrawing.css
+++ b/frontend/src/css/UploadDrawing.css
@@ -76,5 +76,11 @@
 }
 
 .spacer {
-  height: 650px;
+  display: inline-block;
+  width: 20px;
+}
+
+.preview-container {
+  display: flex;
+  flex-direction: row;
 }
