--- a/frontend/src/css/UploadDrawing.css
+++ b/frontend/src/css/UploadDrawing.css
@@ -12,6 +12,13 @@
   margin-bottom: 20px;
 }
 
+.table-button {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin: 10px;
+}
+
 .upload_container {
   display: flex;
   justify-content: flex-start;
