--- a/frontend/src/css/FileUpload.css
+++ b/frontend/src/css/FileUpload.css
@@ -48,13 +48,10 @@
   margin-left: 30px;
 }
 
-.file-list {
-  margin: 5px;
-}
-
 .file-item {
   font-size: 16px;
   margin: 5px 0;
+  color:  #315e32;
 }
 
 .upload-button {
