--- a/frontend/src/css/TrainModel.css
+++ b/frontend/src/css/TrainModel.css
@@ -72,11 +72,19 @@
 }
 .window-train {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  align-items: start;
+  height: 100%;
 }
 
 .upload-container {
   display: flex;
   align-items: center;
+}
+
+.model-selection-area {
+  width: 250px;
+  margin-right: 4rem;
+  padding-right: 4rem;
+  border-right: sild 1px gray;
 }
