--- a/frontend/src/css/Documentation.css
+++ b/frontend/src/css/Documentation.css
@@ -1,17 +1,18 @@
 .documentation {
 font-family: 'Poynter Gothic', sans-serif;
-max-width: 800px;
+max-width: 1200px;
 margin: 20px auto;
-padding: 20px;
+padding: 20px 6.5rem;
 background: #f9f9f9;
 border-radius: 8px;
 box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+font-size: 200%;
 }
 
 .documentation h2 {
 text-align: center;
 color: #333;
-margin-bottom: 20px;
+margin-bottom: 5rem;
 }
 
 .documentation .section {
